@@ -1,3 +1,7 @@
+2003-02-18  Bruno Haible  <bruno@clisp.org>
+
+	* MODULES.html.sh (func_all_modules): Add mathl.
+
 2003-02-18  Paolo Bonzino  <bonzini@gnu.org>
 
 	* modules/mathl: New file.
